Update gradle comments